--- a/Gemfile.lock.working.master
+++ b/Gemfile.lock.working.master
@@ -1,15 +1,15 @@
 PATH
   remote: .
   specs:
-    rhino (0.2.7)
+    rhino (0.2.5)
       activemodel (~> 3.1.0)
       activesupport (~> 3.1.0)
       hbase-thrift (~> 0.90.4)
       i18n (~> 0.6.0)
-      multi_json (= 1.0.3)
-      thrift (~> 0.7.0)
+      thrift (~> 0.6.0)
 
 GEM
+  remote: http://rubygems.util.pages/
   remote: http://uproxy.util.pages/rubygems-whitepages/
   remote: http://uproxy.util.pages/rubygems-mirror/
   remote: http://rubygems.org/
@@ -24,19 +24,20 @@ GEM
     diff-lcs (1.1.3)
     hbase-thrift (0.90.4)
     i18n (0.6.0)
-    multi_json (1.0.4)
+    multi_json (1.0.3)
     rake (0.8.7)
-    rspec (2.7.0)
-      rspec-core (~> 2.7.0)
-      rspec-expectations (~> 2.7.0)
-      rspec-mocks (~> 2.7.0)
-    rspec-core (2.7.1)
-    rspec-expectations (2.7.0)
+    rspec (2.6.0)
+      rspec-core (~> 2.6.0)
+      rspec-expectations (~> 2.6.0)
+      rspec-mocks (~> 2.6.0)
+    rspec-core (2.6.4)
+    rspec-expectations (2.6.0)
       diff-lcs (~> 1.1.2)
-    rspec-mocks (2.7.0)
-    thrift (0.7.0)
+    rspec-mocks (2.6.0)
+    thrift (0.6.0)
 
 PLATFORMS
+  java
   ruby
 
 DEPENDENCIES
